--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,17 +1,16 @@
 server {
     listen 80;
 
-    # Serve file statis (HTML, JS, dll)
     location / {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.html;
     }
 
-    # Proxy permintaan API ke backend
     location /api/ {
         proxy_pass http://10.0.2.226:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
+
