--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://10.0.2.226:3000/;
+        proxy_pass http://10.0.2.226:3000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
