--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Frontend Docker
+name: Deploy Frontend Static
 
 on:
   push:
@@ -10,20 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
-
-      - name: Deploy ke EC2 via SSH
-        uses: appleboy/ssh-action@master
+      - name: Deploy ke EC2 Frontend via SSH
+        uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ec2-user
+          username: ubuntu
           key: ${{ secrets.EC2_KEY }}
           script: |
-            # Masuk ke direktori UTS-Cloud/frontend
-            cd /home/ec2-user/UTS-Cloud/frontend
+            cd /home/ubuntu/UTS-Cloud
+            git reset --hard
             git pull origin main
-            sudo docker build -t uts-frontend .
-            sudo docker stop uts-frontend || true
-            sudo docker rm uts-frontend || true
-            sudo docker run -d -p 80:80 --name uts-frontend uts-frontend
+            sudo cp -r frontend/* /usr/share/nginx/html/
+            sudo cp frontend/nginx.conf /etc/nginx/conf.d/default.conf
+            sudo systemctl restart nginx
